<resources>
    <string name="app_name">Список криптовалют</string>
    <string name="currency_usd">usd</string>
    <string name="currency_rub">rub</string>
    <!-- Coin item strings -->
    <string name="coin_img_descriptor">Coin image</string>
    <string name="unknown_coin">Unknown coin</string>
    <string name="unknown_symbol">UCS</string>

    <!-- Error Strings -->
    <string name="bitcoin_img_descriptor">Bitcoin image</string>
    <string name="error_descriptor">Произошла какая-то ошибка :(\nПопробуем снова?</string>
    <string name="retry">Попробовать</string>

    <!-- Coin Info Strings -->
    <string name="bt_back_descriptor">Button Back</string>
    <string name="description">Описание</string>
    <string name="categories">Категории</string>
    <string name="unknown_descriptor">Description not found</string>
</resources>