<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.coinInfo.CoinInfo">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:contentDescription="@string/bt_back_descriptor"

                android:src="@drawable/arrow_back"
                android:clickable="true"
                android:focusable="true"
                />

            <TextView
                android:id="@+id/tv_coin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:text="Bitcoin"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                />

        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:indeterminate="true"
        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_coin_info"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:paddingTop="8dp"
        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:id="@+id/iv_coin_image"
                android:layout_width="90dp"
                android:layout_height="90dp"

                tools:src = "@drawable/bitcoin_img"

                android:contentDescription="@string/coin_img_descriptor"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/description"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                />

            <TextView
                android:id="@+id/tv_coin_descriptor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                tools:text="Bitcoin is a decentralized cryptocurrency originally described in a 2008 whitepaper by a person, or group of people, using the alias Satoshi Nakamoto. It was launched soon after, in January 2009.

Bitcoin is a peer-to-peer online currency, meaning that all transactions happen directly between equal, independent network participants, without the need for any intermediary to permit or facilitate them. Bitcoin was created, according to Nakamoto’s own words, to allow “online payments to be sent directly from one party to another without going through a financial institution.”
Bitcoin is a peer-to-peer online currency, meaning that all transactions happen directly between equal, independent network participants, without the need for any intermediary to permit or facilitate them. Bitcoin was created, according to Nakamoto’s own words, to allow “online payments to be sent directly from one party to another without going through a financial institution.”"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/categories"

                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                />

            <TextView
                android:id="@+id/tv_coin_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                tools:text="Smart Contract Platform, Ethereum Ecosystems"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                />



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/il_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        layout="@layout/error_layout"

        android:visibility="gone"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>